--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
     padding: 0;
     min-height: 100vh;          
     display: flex;              
-    flex-direction: column;     
+    flex-direction: column;
+    background-color: rgb(250, 250, 250); 
 }
 
 footer {
@@ -15,7 +16,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#858d8f ;
+    background-color:#f80303 ;
     font-size: small;
     padding: 5px;
     color: aliceblue;
@@ -88,7 +89,7 @@ footer {
 }
 
 .c-footer {
-    background-color:#858d8f;
+    background-color:#f80303;
     color: aliceblue;
     display: flex;
     justify-content: center;
